fixed a few buggy image and text input size issues on mobile.

--- a/stylesheets/_mediaQueries.scss
+++ b/stylesheets/_mediaQueries.scss
@@ -131,4 +131,9 @@
 		margin-top: 0;
 	}
 
+	form{
+		width: 100%;
+		// margin: 0 auto;
+	}
+
 }
