--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -139,17 +139,19 @@ h3{
 figure{
 	@extend %elevenColumns;
 	margin: 1rem;
-	background-color: rgba(255, 255, 255, .3);
-	border-radius: 10px;
+	// background-color: rgba(255, 255, 255, .3);
+	// border-radius: 10px;
 
 	img{
 		display: block;
 		max-width: 100%;
+		margin: 0 auto;
 	}
 
 
 	@media screen and #{$smartphones}{
 		width: 100%;
+		margin: 1rem 0;
 	}
 }
 
